tests/paczka1/fuzzy1/66768368.err
Error in line 1: QNsg7aQId3 S311 12,4
Error in line 21: 5WLVvGlKi S260 432,9
Error in line 23: 5WLVvGlKi S311 31,8
Error in line 20: QNsg7aQId3 A447 84,0
Error in line 24: 5WLVvGlKi S260 0,3
Error in line 26: QNsg7aQId3 A312 21,7
Error in line 27: 5WLVvGlKi A447 6,7
